--- a/style.css
+++ b/style.css
@@ -155,9 +155,9 @@ i {
     top: 178px;
     transform: translateX(-50%);
     height: 100px;
-    box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.20);
-    box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
-                -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+    box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.20);
+    /* box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+                -8px -8px 12px 0 rgba(255, 255, 255, 0.3); */
 }
 
 .winner { background-color: #f7f7f7; }
